--- a/styles.css
+++ b/styles.css
@@ -1,11 +1,12 @@
 /* global styling */
-*{
+* {
   box-sizing: border-box;
+  padding: 0;
+  margin: 0;
 }
 
 body {
     font-family: 'Noto Sans', sans-serif;
-    overflow-x: hidden;
 }
 
 #seek-bar {
@@ -21,10 +22,11 @@ body {
     height: 20px;
     width: 20px;
     border-radius: 50%;
-    border:5px solid #663366;
+    border: 4px solid #663366;
     background-color: #fff;
     box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.4);
 }
+
 
 /* firefox styling the track when it's "done" or filled */
 #seek-bar::-moz-range-progress {
@@ -44,24 +46,4 @@ body {
   box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.4);
 }
 
-.animate-scroll {
-  animation: fadeInUp 613s linear infinite;
-  max-height: 100%;
-  max-width: 100%;  
-  overflow-y: scroll;
-  opacity: 0;
-}
 
-/* on-scroll animation */
-@keyframes fadeInUp {
-  from {
-    opacity: 1;
-  }
-  to {
-    opacity: 1;
-  }
-}
-
-#content::-webkit-scrollbar {
-  display: none;
-}
